<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.rag4j</groupId>
    <artifactId>agent-workshop-assignments-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>agent-workshop-assignments-parent</name>
    <description>Parent POM for workshop agent multimodule project</description>

    <modules>
        <module>auth-server</module>
        <module>core-agent</module>
        <module>embabel-agent</module>
        <module>evals-web-app</module>
        <module>favourites-mcp</module>
        <module>favourites-mcp-remote</module>
        <module>java-agent</module>
        <module>llm-client</module>
        <module>springai-agent</module>
        <module>web-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <openai.version>2.20.1</openai.version>
        <spring-boot.version>3.5.7</spring-boot.version>
        <spring-ai.version>1.0.3</spring-ai.version>
        <bootstrap.version>5.3.8</bootstrap.version>
        <embabel-agent.version>0.3.5</embabel-agent.version>
        <logback.version>1.5.20</logback.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal dependencies -->
            <dependency>
                <groupId>org.rag4j</groupId>
                <artifactId>core-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rag4j</groupId>
                <artifactId>llm-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rag4j</groupId>
                <artifactId>embabel-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rag4j</groupId>
                <artifactId>java-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rag4j</groupId>
                <artifactId>springai-agent</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>com.openai</groupId>
                <artifactId>openai-java</artifactId>
                <version>${openai.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- For vulnerabilities -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.18.0</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
